fix: wrong fonts used on map labels

--- a/src/App.scss
+++ b/src/App.scss
@@ -104,6 +104,8 @@ a {
     background-color: rgba(255, 255, 255, 0.75);
     padding: 1px 4px;
     border-radius: 2px;
+    font-family: $body-font !important;
+    font-size: 0.75rem !important;
   }
 }
 
